@@ -1,7 +1,7 @@
 dnl# $Id$
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(libast, 0.1)
+AM_INIT_AUTOMAKE(libast, 0.2)
 AC_DEFINE_UNQUOTED(LIBAST_VERSION, "$VERSION")
 
 dnl# Set some basic variables
