@@ -38,7 +38,7 @@ test_macros(void)
   char memset_test[] = "abcdefghijklmnopqrstuvwxyz";
   char sc1 = 'X', sc2 = 'K';
   int si1 = 472, si2 = 8786345;
-  long sl1 = 0x98765432, sl2 = 0xffeeddff;
+  unsigned long sl1 = 0x98765432, sl2 = 0xffeeddff;
 
   TEST_BEGIN("MEMSET() macro");
   MEMSET(memset_test, '!', CONST_STRLEN(memset_test));
@@ -143,12 +143,47 @@ test_strings(void)
   TEST_BEGIN("split() function");
   slist = split(" ", "Splitting a string on spaces");
   TEST_FAIL_IF(!slist);
-  TEST_FAIL_IF(!slist[0] || !slist[1] || !slist[2] || !slist[3] || !slist[4]);
-  TEST_FAIL_IF(strcmp(slist[1], "Splitting"));
+  TEST_FAIL_IF(!slist[0] || !slist[1] || !slist[2] || !slist[3] || !slist[4] || slist[5]);
+  TEST_FAIL_IF(strcmp(slist[0], "Splitting"));
+  TEST_FAIL_IF(strcmp(slist[1], "a"));
+  TEST_FAIL_IF(strcmp(slist[2], "string"));
+  TEST_FAIL_IF(strcmp(slist[3], "on"));
+  TEST_FAIL_IF(strcmp(slist[4], "spaces"));
+  slist = split(NULL, "          a\t \ta        a a a a       a     ");
+  TEST_FAIL_IF(!slist);
+  TEST_FAIL_IF(!slist[0] || !slist[1] || !slist[2] || !slist[3] || !slist[4] || !slist[5] || !slist[6] || slist[7]);
+  TEST_FAIL_IF(strcmp(slist[0], "a"));
+  TEST_FAIL_IF(strcmp(slist[1], "a"));
   TEST_FAIL_IF(strcmp(slist[2], "a"));
-  TEST_FAIL_IF(strcmp(slist[3], "string"));
-  TEST_FAIL_IF(strcmp(slist[4], "on"));
-  TEST_FAIL_IF(strcmp(slist[5], "spaces"));
+  TEST_FAIL_IF(strcmp(slist[3], "a"));
+  TEST_FAIL_IF(strcmp(slist[4], "a"));
+  TEST_FAIL_IF(strcmp(slist[5], "a"));
+  TEST_FAIL_IF(strcmp(slist[6], "a"));
+  slist = split(NULL, "  first \"just the second\" third \'fourth and \'\"fifth to\"gether last");
+  TEST_FAIL_IF(!slist);
+  TEST_FAIL_IF(!slist[0] || !slist[1] || !slist[2] || !slist[3] || !slist[4] || slist[5]);
+  TEST_FAIL_IF(strcmp(slist[0], "first"));
+  TEST_FAIL_IF(strcmp(slist[1], "just the second"));
+  TEST_FAIL_IF(strcmp(slist[2], "third"));
+  TEST_FAIL_IF(strcmp(slist[3], "fourth and fifth together"));
+  TEST_FAIL_IF(strcmp(slist[4], "last"));
+  slist = split(NULL, "\'don\\\'t\' try this    at home \"\" ");
+  TEST_FAIL_IF(!slist);
+  TEST_FAIL_IF(!slist[0] || !slist[1] || !slist[2] || !slist[3] || !slist[4] || !slist[5] || slist[6]);
+  TEST_FAIL_IF(strcmp(slist[0], "don\'t"));
+  TEST_FAIL_IF(strcmp(slist[1], "try"));
+  TEST_FAIL_IF(strcmp(slist[2], "this"));
+  TEST_FAIL_IF(strcmp(slist[3], "at"));
+  TEST_FAIL_IF(strcmp(slist[4], "home"));
+  TEST_FAIL_IF(slist[5][0]);
+  slist = split(":", "A:B:C:D:::E");
+  TEST_FAIL_IF(!slist);
+  TEST_FAIL_IF(!slist[0] || !slist[1] || !slist[2] || !slist[3] || !slist[4] || slist[5]);
+  TEST_FAIL_IF(strcmp(slist[0], "A"));
+  TEST_FAIL_IF(strcmp(slist[1], "B"));
+  TEST_FAIL_IF(strcmp(slist[2], "C"));
+  TEST_FAIL_IF(strcmp(slist[3], "D"));
+  TEST_FAIL_IF(strcmp(slist[4], "E"));
   TEST_PASS();
 
   TEST_PASSED("string");
